Closed Bug 1503502 Opened 7 years ago Closed 7 years ago

Crash in nsTSubstring<T>::Assign | mozilla::net::TRR::TRR

Categories

(Core :: Networking: DNS, defect, P1)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox-esr60 --- unaffected
firefox63 --- unaffected
firefox64 --- unaffected
firefox65 --- fixed

People

(Reporter: calixte, Assigned: bagder)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression, Whiteboard: [necko-triaged][trr])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-0c33a17d-bfa5-4400-a921-1f8020181031. ============================================================= Top 10 frames of crashing thread: 0 xul.dll nsTSubstring<char>::Assign xpcom/string/nsTSubstring.cpp:513 1 xul.dll void mozilla::net::TRR::TRR netwerk/dns/TRR.h:108 2 xul.dll nsresult mozilla::net::TRR::On200Response netwerk/dns/TRR.cpp:974 3 xul.dll mozilla::net::TRR::OnStopRequest netwerk/dns/TRR.cpp:1028 4 xul.dll mozilla::extensions::ChannelWrapper::RequestListener::OnStopRequest toolkit/components/extensions/webrequest/ChannelWrapper.cpp:1043 5 xul.dll mozilla::net::nsHttpChannel::OnStopRequest netwerk/protocol/http/nsHttpChannel.cpp:7907 6 xul.dll unsigned int nsInputStreamPump::OnStateStop netwerk/base/nsInputStreamPump.cpp:706 7 xul.dll nsInputStreamPump::OnInputStreamReady netwerk/base/nsInputStreamPump.cpp:436 8 xul.dll nsInputStreamReadyEvent::Run xpcom/io/nsStreamUtils.cpp:102 9 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1245 ============================================================= There are 15 crashes (from 9 installations) in nightly 65 with buildid 20181030224027. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1501302. [1] https://hg.mozilla.org/mozilla-central/rev?node=c17a9a391852
Flags: needinfo?(daniel)
Crash Signature: [@ nsTSubstring<T>::Assign | mozilla::net::TRR::TRR] → [@ nsTSubstring<T>::Assign | mozilla::net::TRR::TRR] [@ nsTSubstring<T>::Assign | mozilla::net::TRR::OnStopRequest]
Yes, that's definately the offending bug...
Assignee: nobody → daniel
Flags: needinfo?(daniel)
Priority: -- → P1
Whiteboard: [necko-triaged][trr]
For resolves that aren't associated with a hostrecord (like the initial NS verification) there is no mRec pointer so set a blank originSuffix then. MozReview-Commit-ID: FuTP9qCm2Iu
Status: NEW → ASSIGNED
Pushed by daniel@haxx.se: https://hg.mozilla.org/integration/autoland/rev/45d0e5c1b3ce TRR: use blank originSuffix without mRec r=valentin
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: