bug 1503502 - TRR: use blank originSuffix without mRec r=valentin

For resolves that aren't associated with a hostrecord (like the initial
NS verification) there is no mRec pointer so set a blank originSuffix
then.

MozReview-Commit-ID: FuTP9qCm2Iu

Differential Revision: https://phabricator.services.mozilla.com/D10366

--HG--
extra : moz-landing-system : lando